@@ -17,9 +17,15 @@ tool_wear
 - Enables/Disables wear for tools such as picks, axes, shovels, etc.
 - type:    bool
 - default: true
+
+weapon_wear
+- Enables/Disables wear for weapons.
+- type:    bool
+- default: true
 ```
 
 ### Links:
 
+- [Git repo](https://github.com/AntumMT/mod-equip_wear)
 - [Changelog](changelog.txt)
 - [TODO](TODO.txt)
