@@ -1,4 +1,3 @@
 
 TODO:
-- add disable weapon wear
 - add disable armor wear
