@@ -3,3 +3,4 @@ v0.1
 ----
 - initial release
 - added disable tool wear
+- added disable weapon wear
